# wgpu-shape-rendering

./: README.md  deploy.sh  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
wasm/: Cargo.toml
wasm/src/: geometry.rs  lib.rs  renderer.rs  shader.wgsl  util.rs
wasm/src/geometry/: path.rs  segment.rs  subdivision.rs
wasm/src/renderer/: example_mesh.rs  mesh.rs  renderer.rs  shader.wgsl  uniforms.rs
